# echo

./: README.md  __init__.py  pyproject.toml  test_bug.py
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/echo/: __init__.py  watcher.py
tests/: test_watcher.py
